Most import 3D Model functionality finished. Tweaked the ImportImage UI for indicating wait state. More bindable models for handling Vectors.

--- a/Main/SEToolbox/SEToolbox/Interop/SubtypeId.tt
+++ b/Main/SEToolbox/SEToolbox/Interop/SubtypeId.tt
@@ -20,8 +20,9 @@ namespace SEToolbox.Interop
         Empty = 0,
 
 		// Although not enumerated in the SpaceEngineers API, I'm autogenerating enumerations 
-		// direct from the game source here to make sure we have strongly typed names, rather 
-		// than relying upon hardcoded 'strings' which required maintenance.
+		// direct from the game source here to make sure we have strongly typed names when generating content,
+		// rather than relying upon hardcoded 'strings' which required maintenance.
+		// When checking content read from 'world' saves however, we will have to rely upon the game data.
 
 <#
         
