--- a/Main/SEToolbox/SEToolboxSetup/Product.wxs
+++ b/Main/SEToolbox/SEToolboxSetup/Product.wxs
@@ -3,19 +3,23 @@
      xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
 
   <Product Id="*" Name="!(loc.ApplicationTitle)" Language="1033" Version="01.007.005.3" Manufacturer="!(loc.ManufacturerName)" UpgradeCode="87c8aa64-1a84-4767-ae17-a4b6b6ee1b89">
-		<Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
+    <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
     <Media Id="1" Cabinet="SEToolbox.cab" EmbedCab="yes" />
 
-		<!--<WixVariable Id="WixUIBannerBmp" Value="WixUIBannerBmp.bmp" />
+    <!--<WixVariable Id="WixUIBannerBmp" Value="WixUIBannerBmp.bmp" />
     <WixVariable Id="WixUIDialogBmp" Value="WixUIDialogBmp.bmp" />-->
 
-    <MajorUpgrade DowngradeErrorMessage="A newer version of !(loc.ProductName) is already installed." />
+    <Upgrade Id="87c8aa64-1a84-4767-ae17-a4b6b6ee1b89">
+      <UpgradeVersion Minimum="1.0.0.0" Maximum="99.0.0.0" Property="PREVIOUSVERSIONSINSTALLED" IncludeMinimum="yes" IncludeMaximum="no" />
+    </Upgrade>
+
+    <InstallExecuteSequence>
+      <RemoveExistingProducts After="InstallInitialize" />
+    </InstallExecuteSequence>
 
     <Feature Id="ProductFeature" Title="!(loc.DirApplicationName)" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
     </Feature>
-
-  
 
     <Icon Id="APPLICATIONICON" SourceFile="app.ico"/>
 
@@ -40,7 +44,7 @@
     <!-- UI -->
     <UIRef Id="WixUI_InstallDir" />
     <!--<UIRef Id="WixUI_CustomInstallDir" />-->
-    
+
     <UIRef Id="WixUI_ErrorProgressText" />
     <Property Id="WIXUI_INSTALLDIR" Value="APPLICATIONFOLDER" />
     <Property Id="ARPPRODUCTICON" Value="APPLICATIONICON" />
@@ -99,9 +103,9 @@
   </Product>
 
   <Fragment>
-   
-    
-      <UI Id="WixUI_CustomInstallDir">
+
+
+    <UI Id="WixUI_CustomInstallDir">
       <!--<Dialog Id="ProductServerDlg" Width="370" Height="270" Title="!(loc.ProductServerDlg_Title)">
         <Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="!(loc.InstallDirDlgBannerBitmap)" />
         <Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="0" />
@@ -155,10 +159,10 @@
       
       <Publish Dialog="InstallDirDlg" Control="Back" Event="NewDialog" Value="ProductServerDlg">1</Publish>-->
 
-        <Publish Dialog="LicenseAgreementDlg" Control="Next" Event="NewDialog" Value="InstallDirDlg">LicenseAccepted = "1"</Publish>
+      <Publish Dialog="LicenseAgreementDlg" Control="Next" Event="NewDialog" Value="InstallDirDlg">LicenseAccepted = "1"</Publish>
 
-        <Publish Dialog="InstallDirDlg" Control="Back" Event="NewDialog" Value="LicenseAgreementDlg">1</Publish>
-        
+      <Publish Dialog="InstallDirDlg" Control="Back" Event="NewDialog" Value="LicenseAgreementDlg">1</Publish>
+
       <Publish Dialog="InstallDirDlg" Control="Next" Event="SetTargetPath" Value="[WIXUI_INSTALLDIR]" Order="1">1</Publish>
       <Publish Dialog="InstallDirDlg" Control="Next" Event="DoAction" Value="WixUIValidatePath" Order="2">NOT WIXUI_DONTVALIDATEPATH</Publish>
       <Publish Dialog="InstallDirDlg" Control="Next" Event="SpawnDialog" Value="InvalidDirDlg" Order="3"><![CDATA[NOT WIXUI_DONTVALIDATEPATH AND WIXUI_INSTALLDIR_VALID<>"1"]]></Publish>
@@ -178,8 +182,8 @@
 
       <Property Id="ARPNOMODIFY" Value="1" />
     </UI>
-    
+
     <UIRef Id="WixUI_Common" />
-    
+
   </Fragment>
 </Wix>
